* Fri Aug 18 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.4-0
- Update concat version in metadata.json

* Mon Apr 24 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.3-0
- gssproxy ensured running when secure_nfs is true, el > 7.1
- Confine puppet version in metadata.json

* Tue Apr 11 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.3-0
- nfs_anon_write selboolean is only applied if selinux is on.

* Thu Mar 23 2017 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.0.2-0
- Fixed path for systemctl

* Fri Mar 10 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.1-0
- Fixed the metadata.json dependencies for simp-tcpwrappers

* Thu Dec 08 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Updated global catalysts and strong typed.
- Fix bug whereby the STATDARGS parameter in NFS sysconfig server
  configuration was not set.
- Fix bug whereby the LOCKD_ARG parameter in NFS sysconfig server
  configuration was improperly set.

* Thu Dec 01 2016 Nick Markowski <nmarkowski@keywcorp.com> - 5.0.1-0
- Removed pupmod-simp-sysctl in favor of augeas-sysctl

* Wed Nov 23 2016 Jeanne Greulich <jgreulich.simp@onyxpoint.com> - 5.0.0-0
- update requirement versions

* Tue Nov 15 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.0-0
- Updated iptables dependency version

* Fri Sep 30 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-0
- Updated to use the new 'simpcat' module that deconflicts with
  'puppetlabs/concat'

* Thu Aug 25 2016 Nick Markowski <nmarkowski@keywcorp.com> - 4.5.2-0
- Defaulted export sec to sys.
- Updated documentation to reflect krb5 integration with manual changes.

* Fri Aug 12 2016 Nick Miller <nick.miller@onyxpoint.com> - 4.5.1-0
- Added a new README

* Mon Aug 01 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.5.0-0
- Added Kerberos Support

* Wed Jul 20 2016 Nick Markowski <nmarkowski@keywcorp.com> - 4.4.4-0
- Removed create_home_dirs functionality (and added it to the simp module).
