@@ -1,17 +1,0 @@
-Obsoletes: pupmod-nfs-test >= 0.0.1
-Requires: pupmod-herculesteam-augeasproviders_sysctl < 3.0.0-0
-Requires: pupmod-herculesteam-augeasproviders_sysctl >= 2.1.0-0
-Requires: pupmod-simp-autofs < 7.0.0-0
-Requires: pupmod-simp-autofs >= 6.0.0-0
-Requires: pupmod-simp-iptables < 7.0.0-0
-Requires: pupmod-simp-iptables >= 6.0.0-0
-Requires: pupmod-simp-krb5 < 8.0.0-0
-Requires: pupmod-simp-krb5 >= 7.0.0-0
-Requires: pupmod-simp-simpcat < 7.0.0-0
-Requires: puppetlabs-concat >= 2.2.0-0
-Requires: puppetlabs-concat < 4.0.0-0
-Requires: pupmod-simp-simplib >= 3.1.0-0
-Requires: pupmod-simp-stunnel < 7.0.0-0
-Requires: pupmod-simp-stunnel >= 6.0.0-0
-Requires: pupmod-simp-tcpwrappers < 7.0.0-0
-Requires: pupmod-simp-tcpwrappers >= 6.0.0-0
